# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_unittest("net_stats_manager_test") {
  module_out_path = "netmanager_base/net_stats_manager_test"

  sources = [
    "net_stats_callback_test.cpp",
    "net_stats_manager_test.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETSTATSMANAGER_SOURCE_DIR/include/stub",
    "$NETSTATSMANAGER_SOURCE_DIR/include",
    "$NETDCONTROLLER_ROOT_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/netstatsclient:net_stats_manager_if",
    "$NETDCONTROLLER_ROOT_DIR:netd_controller",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetStatsClient\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}

group("unittest") {
  testonly = true
  deps = [ ":net_stats_manager_test" ]
}
